[tool.poetry]
name = "scikit-portfolio"
version = "0.1.0"
description = "scikit-portfolio is a Python package designed to introduce data scientists and machine learning engineers to the problem of optimal portfolio allocation in finance"
authors = ["Carlo Nicolini <nicolini.carlo@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/scikit-portfolio/scikit-portfolio"
documentation = "https://scikit-portfolio.github.io/scikit-portfolio/"
keywords= ["finance", "portfolio", "optimization", "quant", "investing"]
classifiers=[
        "Development Status :: 1 - Alpha",
        "Environment :: Console",
        "Intended Audience :: Financial and Insurance Industry",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Office/Business :: Financial",
        "Topic :: Office/Business :: Financial :: Investment",
    ]
packages = [ {include = "skportfolio"} ]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
cvxpy = "^1.2.1"
pandas = "^1.4.2"
PyPortfolioOpt = "^1.5.3"
empyrical = "^0.5.5"
scikit-learn = "^1.1.1"
statsmodels = "^0.13.2"
matplotlib = { version="^3.5.2", optional=true }
tabulate = "0.8.9"

[tool.poetry.dev-dependencies]
coverage = "6.3.2"
pytest = "7.1.2"
tox = "3.25.0"
mkdocs = "1.3.0"
mkdocs_include = "1.0.0"
mkdocs_gallery = "0.7.3"
mkdocstrings = "0.18.1"
mkdocs-material = "8.2.5"
mkdocs-material-extensions = "1.0.3"
mkapi = "1.0.14"

[tool.poetry.extras]
optionals = ["cvxopt", "jupyterlab"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
